Fix a crash when trying to use Move Selection Tool on a raster selection

All the jobs of a stroke that supports Instant Preview must support
createLodClone() call.

BUG:428260